@@ -2,9 +2,12 @@ package com.finwise.smartmoney.service;
 
 import com.finwise.smartmoney.dto.ExpenseRequestDTO;
 import com.finwise.smartmoney.dto.ExpenseResponseDTO;
-import com.finwise.smartmoney.dto.IncomeResponseDTO;
 import com.finwise.smartmoney.entity.Expense;
+import com.finwise.smartmoney.entity.RecurringTransaction;
+import com.finwise.smartmoney.enums.Frequency;
+import com.finwise.smartmoney.enums.TransactionType;
 import com.finwise.smartmoney.repository.ExpenseRepository;
+import com.finwise.smartmoney.repository.RecurringTransactionRepository;
 import com.finwise.smartmoney.util.DateUtils;
 import com.finwise.smartmoney.util.MonthRange;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,54 +19,80 @@ import java.util.stream.Collectors;
 
 @Service
 public class ExpenseService {
+
     @Autowired
     private ExpenseRepository expenseRepository;
 
-    public String saveExpense(ExpenseRequestDTO dto) {
-        Expense expense = new Expense();
-        expense.setAmount(dto.getAmount());
-        expense.setDate(dto.getDate());
-        expense.setCategory(dto.getCategory());
-        expense.setType(dto.getType());
-        expense.setPaymentMode(dto.getPaymentMode());
-        expense.setIsRecurring(dto.getIsRecurring());
-        expense.setNote(dto.getNote());
+    @Autowired
+    private RecurringTransactionRepository recurringTransactionRepository;
 
-        expenseRepository.save(expense);
+    public String saveExpense(ExpenseRequestDTO expenseRequestDTO) {
+        Expense expense = new Expense();
+        expense.setAmount(expenseRequestDTO.getAmount());
+        expense.setCategory(expenseRequestDTO.getCategory());
+        expense.setType(expenseRequestDTO.getType());
+        expense.setNote(expenseRequestDTO.getNote());
+        expense.setPaymentMode(expenseRequestDTO.getPaymentMode());
+        expense.setDate(expenseRequestDTO.getDate() != null ? expenseRequestDTO.getDate() : LocalDate.now());
+        expense.setIsRecurring(expenseRequestDTO.getIsRecurring());
+
+        Expense savedExpense = expenseRepository.save(expense);
+
+        if (expenseRequestDTO.getIsRecurring() != null && expenseRequestDTO.getIsRecurring()) {
+            RecurringTransaction tx = new RecurringTransaction();
+            tx.setType(TransactionType.EXPENSE);
+            tx.setReferenceId(savedExpense.getId());
+            tx.setStartDate(savedExpense.getDate());
+
+            Frequency frequency = Frequency.MONTHLY;
+            if (expenseRequestDTO.getFrequency() != null) {
+                try {
+                    frequency = Frequency.valueOf(expenseRequestDTO.getFrequency().toUpperCase());
+                } catch (IllegalArgumentException e) {
+                    throw new RuntimeException("Invalid frequency. Allowed: WEEKLY, MONTHLY, YEARLY");
+                }
+            }
+
+            tx.setFrequency(frequency);
+            tx.setEndDate(expenseRequestDTO.getEndDate());
+            Integer recurringDay = expenseRequestDTO.getRecurringDay() != null
+                    ? expenseRequestDTO.getRecurringDay()
+                    : savedExpense.getDate().getDayOfMonth();
+            tx.setRecurringDay(recurringDay);
+            tx.setNextDueDate(getNextDate(savedExpense.getDate(), frequency));
+            tx.setActive(true);
+            recurringTransactionRepository.save(tx);
+        }
+
         return "Expense saved successfully";
     }
 
     public List<ExpenseResponseDTO> getExpensesByMonth(int month, int year) {
-
-        if (DateUtils.isFutureMonth(year, month)) {
-            throw new IllegalArgumentException("Cannot fetch expenses for a future month.");
-        }
-
         MonthRange range = DateUtils.getMonthRange(year, month);
-        LocalDate start = range.getStart();
-        LocalDate end = range.getEnd();
-
         List<Expense> expenses = expenseRepository.findByDateBetween(range.getStart(), range.getEnd());
-
-        if (expenses.isEmpty()) {
-            throw new RuntimeException("No expenses found for the given month.");
-        }
-
         return expenses.stream()
                 .map(this::mapToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private ExpenseResponseDTO mapToDTO(Expense e) {
+    private ExpenseResponseDTO mapToDTO(Expense expense) {
         ExpenseResponseDTO dto = new ExpenseResponseDTO();
-        dto.setId(e.getId());
-        dto.setAmount(e.getAmount());
-        dto.setDate(e.getDate());
-        dto.setCategory(e.getCategory());
-        dto.setType(e.getType());
-        dto.setPaymentMode(e.getPaymentMode());
-        dto.setIsRecurring(e.getIsRecurring());
-        dto.setNote(e.getNote());
+        dto.setId(expense.getId());
+        dto.setAmount(expense.getAmount());
+        dto.setCategory(expense.getCategory());
+        dto.setDate(expense.getDate());
+        dto.setType(expense.getType());
+        dto.setPaymentMode(expense.getPaymentMode());
+        dto.setNote(expense.getNote());
+        dto.setIsRecurring(expense.getIsRecurring());
         return dto;
+    }
+
+    private LocalDate getNextDate(LocalDate from, Frequency freq) {
+        return switch (freq) {
+            case WEEKLY -> from.plusWeeks(1);
+            case MONTHLY -> from.plusMonths(1);
+            case YEARLY -> from.plusYears(1);
+        };
     }
 }
